Fixed issue with inline block not lining up and potential overflow on cards

--- a/frontend/src/Styles/card.css
+++ b/frontend/src/Styles/card.css
@@ -7,8 +7,8 @@
     text-align: center;
     width: 400px;
     display: inline-block;
-    height: 400px
-    
+    height: 400px;
+    vertical-align: middle;
 }
 
 .compare{
